feat: busqueda por nombre tambien filtra por distancia